@@ -1,3 +1,4 @@
+Version 54 	 2010-08-16 	 To Activate/Deactivate accounts in Google 
 Version 53 	 2010-08-16 	 Confirmation while deleting Google account 
 Version 52 	 2010-08-16 	 Small changes to admin 
 Version 51 	 2010-08-16 	 Changing vidyalaya_email_id to college_email_id 
